Escaped the escape (s)hell of Runtime.exec() by using ProcessBuilder with "/bin/sh", "-c" and the actual command. TODO: cmd.exe equivalent.